--- a/css/app.css
+++ b/css/app.css
@@ -36,8 +36,8 @@ nav {
 
 
 img {
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 400px;
 }
 
 h1 {
@@ -62,13 +62,32 @@ footer {
 }
 
 button {
-    background-color: #3882f6;
+    background-color: #3780f6;
     color: white;
-}
+    font-size:15px;
+    font-family:Arial;
+    width:140px;
+    height:50px;
+    border-width:0px;
+    border-color:#057fd0;
+    font-weight:bold;
+    border-radius: 14px;
+  }
 
+  .images {
+      display: flex;
+      flex-direction: column;
+      margin: 7% 15%;
+      align-content: space-around;
+  }
+
+  .image-row {
+      display: flex;
+  }
 
 .text {
-    align-items: center;
+    align-items: flex-start;
+    text-align: left;
 }
 
 blockquote {
@@ -81,4 +100,11 @@ blockquote {
 figcaption {
     color: #1f3927;
     font-size: 36px; 
+}
+
+.images img {
+    width: 200px;
+    height: 200px;
+    border: 3px solid #3780f6;
+    
 }
