--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,7 @@
+body {
+    font-family: "roboto", sans-serif;
+}
+
 /* Header Section */
 
 header {
@@ -42,7 +46,7 @@ img {
 
 h1 {
     font-size: 48px;
-    font-weight: bold;
+    font-weight: 700;
     color: #f9faf8;
 }
 
@@ -59,18 +63,18 @@ h3 {
 footer {
     
     background-color: #1f2937;
+    color: #fff;
+    text-align: center;
 }
 
 button {
     background-color: #3780f6;
     color: white;
     font-size:15px;
-    font-family:Arial;
     width:140px;
     height:50px;
     border-width:0px;
     border-color:#057fd0;
-    font-weight:bold;
     border-radius: 14px;
   }
 
@@ -94,17 +98,26 @@ blockquote {
     color: #1f3927;
     font-size: 36px;
     font-style: italic;
-    font-weight: 100;
+    font-weight: 300;
+    padding: 5%;
 }
 
 figcaption {
     color: #1f3927;
     font-size: 36px; 
+    text-align: right;
+    padding: 0 5% 5% 0;
 }
 
 .images img {
     width: 200px;
     height: 200px;
     border: 3px solid #3780f6;
+    border-radius: 20px;
     
 }
+
+.images h2 {
+    align-self: center;
+}
+
